# hal1210

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  build.rs  hal1210.code-workspace  hal1210.service.in  rainbowpacket.hex  rainbowpacket.txt  wayled.code-workspace
bindings/core/: Cargo.toml
bindings/core/src/: lib.rs
bindings/node/: .gitignore  Cargo.toml  package.json  postbuild.sh  stub.d.ts
bindings/node/examples/: manual-mode.ts
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyhal1210client.pyi  pyproject.toml
bindings/python/examples/: manual_mode.py
bindings/python/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs  monitoring.rs
daemon/: Cargo.toml  build.rs  rust-toolchain.toml
daemon/examples/: solid_serial.rs
daemon/shaders/border-colors/src/: lib.rs
daemon/src/: bridge.rs  main.rs  monitoring.rs
daemon/src/__test__/: mod.rs
daemon/src/bridge/: cec_control.rs  frame.rs  idle.rs  kinect.rs  messaging.rs  mod.rs
daemon/src/cec/: mod.rs
daemon/src/client/: mod.rs  session.rs
daemon/src/com/: mod.rs
daemon/src/gpu/: drm.rs  mod.rs
daemon/src/gpu/shader/: border_colors.rs  mod.rs
daemon/src/gpu/test/: mod.rs
daemon/src/kinect/: mod.rs
daemon/src/kinect/freenect/: mod.rs
daemon/src/kinect/freenect/patches/: libfreenect.hpp.patch
daemon/src/kinect/opencv/: mod.rs
daemon/src/led/: effects.rs  esp32.rs  mod.rs
daemon/src/net/: mod.rs
daemon/src/wayland/: idle.rs  mod.rs  screencopy.rs
daemon/src/wayland/test/: mod.rs
daemoncomm/: Cargo.toml
daemoncomm/src/: codec.rs  lib.rs  ser_de.rs
daemoncomm/src/client/: codec.rs  mod.rs
daemoncomm/src/server/: codec.rs
espled/: Cargo.toml  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
espled/.cargo/: config.toml
espled/src/: led.rs  main.rs  usb.rs
kinect/: .gitignore  Cargo.toml  build.rs
kinect/src/: main.rs  monitoring.rs
kinect/src/freenect/: mod.rs
ledcomm/: Cargo.toml
ledcomm/src/: lib.rs
shadercomm/: Cargo.toml
shadercomm/src/: lib.rs
shaders/border-colors/: Cargo.toml
shaders/color/: Cargo.toml
shaders/color/src/: lib.rs
spec/: kinect.md
src/: bridge.rs  main.rs  monitoring.rs
src/gpu/: drm.rs  mod.rs
src/gpu/shader/: border_colors.rs  mod.rs
src/led/: mod.rs  mystic.rs
src/wayland/: mod.rs
wayled/: Cargo.toml  build.rs
wayled/examples/: rainbow_packet.rs  rainbow_rfc2217.rs  rainbow_serial.rs  solid_serial.rs
wayled/shaders/border-colors/: Cargo.toml
wayled/shaders/border-colors/src/: lib.rs
wayled/src/: bridge.rs  main.rs  monitoring.rs
wayled/src/gpu/: mod.rs
wayled/src/gpu/shader/: border_colors.rs  mod.rs
wayled/src/gpu/test/: buffer.rs  mod.rs
wayled/src/led/: esp32.rs  mod.rs
wayled/src/wayland/: mod.rs
wayled/src/wayland/test/: idle.rs
