[package]
name = "wayled"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "shaders/*"]
resolver = "3"

[dependencies]
ash = "0.38.0"
calloop = { version = "0.14.3", features = ["executor", "futures-io"] }
calloop-wayland-source = "0.4.1"
derive_more = { version = "2.0.1", features = ["as_ref"] }
drm = "0.14.1"
futures = "0.3.31"
gbm = "0.18.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = [
  "client",
  "staging",
  "unstable",
] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "808974a0d0a57322df88d87ea05ea29ada565b0d", package = "spirv-builder" }
