[package]
name = "hal1210-cli"
version = "0.1.0"
description = "hal1210 tui"
authors = ["Joey Eamigh <55670930+JoeyEamigh@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
daemoncomm = { path = "../daemoncomm", features = ["client"] }

crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tokio-util = { version = "0.7.13", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
