[package]
name = "daemoncomm"
version = "0.1.0"
edition = "2024"

[features]
default = []
server = []
client = ["tokio/net", "tokio/rt", "tokio/macros"]

[dependencies]
ledcomm = { path = "../ledcomm" }

tokio = { version = "1.48.0", features = [] }
futures = "0.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.0"
rmp-serde = "1.3.0"
serde_bytes = "0.11.19"
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.41"
thiserror = "2.0.17"
