[package]
name = "espled"
version = "0.1.0"
authors = ["Joey Eamigh <55670930+JoeyEamigh@users.noreply.github.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.90"

[[bin]]
name = "espled"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-hal = { version = "0.45.2" }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
ws2812-esp32-rmt-driver = { version = "0.13.1", features = ["smart-leds-trait"] }
smart-leds = "0.4.0"
embassy-executor = { version = "0.9.1", features = ["arch-std", "executor-thread", "log"] }
embassy-sync = { version = "0.7.2", features = ["std"] }

ledcomm = { path = "../ledcomm" }

[build-dependencies]
embuild = "0.33"
