[package]
name = "kinect"
version = "0.1.0"
edition = "2024"

[dependencies]
autocxx = "0.30.0"
calloop = { version = "0.14.3", features = ["executor", "futures-io"] }
calloop-wayland-source = "0.4.1"
cxx = { version = "1.0.188", features = ["c++14"] }
futures = "0.3.31"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = [
  "client",
  "staging",
  "unstable",
] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }

[build-dependencies]
autocxx-build = "0.30.0"
miette = { version = "5", features = ["fancy"] }
walkdir = "2.3"
sha2 = "0.10"
