[package]
name = "hal1210client-core"
version = "0.1.0"
edition = "2024"

[dependencies]
daemoncomm = { path = "../../daemoncomm", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["sync"] }
tokio-util = "0.7.17"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
