
[package]
edition = "2021"
name = "nodehal1210client"
version = "0.1.0"

[lib]
name = "nodehal1210client"
crate-type = ["cdylib"]

[dependencies]
hal1210client-core = { path = "../core" }

napi = { version = "3.0.0", features = [
  "serde-json",
  "tokio_rt",
  "napi6",
  "napi10",
  "compat-mode",
  "async",
] }
napi-derive = { version = "3.0.0", features = ["compat-mode"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.17"
tracing = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
