[package]
name = "pyhal1210client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyhal1210client"
crate-type = ["cdylib"]

[dependencies]
hal1210client-core = { path = "../core" }
once_cell = "1.19"
pyo3 = { version = "0.27.0", features = ["extension-module", "serde"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tokio-util = "0.7"
tracing = "0.1"
